[1.5] - Fully updated the conversion system