@@ -34,7 +34,7 @@ public class ConversionManager {
         return conversionNeeded;
     }
 
-    public static void convert(AdvancedDisplays plugin, String previousVersion, File file) {
+    public static void convert(AdvancedDisplays plugin, File file) {
         YamlConfiguration config = YamlConfiguration.loadConfiguration(file);
         ConfigurationSection settingsSection;
         if (config.contains("settings")) {
@@ -44,175 +44,87 @@ public class ConversionManager {
         }
         assert settingsSection != null;
 
-        switch (previousVersion) {
-            case "1.0" -> {
-                if (config.getString("block") != null) {
-                    config.set("type", DisplayType.BLOCK.name());
-                    settingsSection.set("block", config.getString("block"));
+        // From version 1.0
+        if (config.getString("block") != null) {
+            config.set("type", DisplayType.BLOCK.name());
+            settingsSection.set("block", config.getString("block"));
+            config.set("block", null);
 
-                    ConfigurationSection dataSection = settingsSection.createSection("blockData");
-                    BlockData block = Objects.requireNonNull(Material.getMaterial(Objects.requireNonNull(config.getString("block")))).createBlockData();
-                    if (block.getAsString().indexOf("[") > 0) {
-                        String fullData = block.getAsString().substring(block.getAsString().indexOf("[") + 1, block.getAsString().lastIndexOf("]"));
-                        for (String data : fullData.split(",")) {
-                            String[] dataPart = data.split("=");
-                            dataSection.set(dataPart[0], dataPart[1]);
-                        }
-                    }
-                    settingsSection.setComments("blockData", List.of("For more information about what these values are, visit https://hub.spigotmc.org/javadocs/spigot/org/bukkit/block/data/BlockData.html"));
+        } else if (config.getString("item") != null) {
+            config.set("type", DisplayType.ITEM.name());
+            settingsSection.set("item", config.getString("item"));
+            settingsSection.set("enchanted", false);
+            settingsSection.set("itemTransformation", config.getString("itemTransformation"));
+            config.set("item", null);
+            config.set("itemTransformation", null);
 
-                    config.set("block", null);
-
-                } else if (config.getString("item") != null) {
-                    config.set("type", DisplayType.ITEM.name());
-                    settingsSection.set("item", config.getString("item"));
-                    settingsSection.set("enchanted", false);
-                    settingsSection.set("itemTransformation", config.getString("itemTransformation"));
-                    config.set("item", null);
-                    config.set("itemTransformation", null);
-
-                } else if (config.getString("text") != null) {
-                    config.set("type", DisplayType.TEXT.name());
-                    settingsSection.set("animationTime", 20);
-                    settingsSection.set("refreshTime", 20);
-                    settingsSection.set("text", List.of(Objects.requireNonNull(config.getString("text"))));
-                    settingsSection.set("alignment", config.getString("alignment"));
-                    settingsSection.set("backgroundColor", config.getString("backgroundColor") + ";255");
-                    settingsSection.set("lineWidth", config.getInt("lineWidth"));
-                    settingsSection.set("textOpacity", config.getInt("textOpacity"));
-                    settingsSection.set("defaultBackground", config.getBoolean("defaultBackground"));
-                    settingsSection.set("seeThrough", config.getBoolean("seeThrough"));
-                    config.set("text", null);
-                    config.set("alignment", null);
-                    config.set("backgroundColor", null);
-                    config.set("lineWidth", null);
-                    config.set("textOpacity", null);
-                    config.set("defaultBackground", null);
-                    config.set("seeThrough", null);
-                }
-
-                ConfigurationSection glowSection = Objects.requireNonNull(config.createSection("glow"));
-                glowSection.set("glowing", false);
-                glowSection.set("color", "255;170;0");
-
-                ConfigurationSection hitboxSection = config.createSection("hitbox");
-                hitboxSection.set("override", false);
-                hitboxSection.set("width", 1.0f);
-                hitboxSection.set("height", 1.0f);
-                config.setComments("hitbox", Arrays.asList("Displays don't have hitboxes of their own, so to have click actions independent entities have to be created.", "These settings allow you to control the hitbox of the display.", "(Use F3 + B to see the hitboxes)"));
-
-                Display display = (Display) Bukkit.getEntity(UUID.fromString(Objects.requireNonNull(config.getString("id"))));
-                Objects.requireNonNull(display).remove();
-                config.set("id", null);
-            }
-
-            case "1.1" -> {
-                DisplayType type = DisplayType.valueOf(config.getString("type"));
-                if (type == DisplayType.BLOCK) {
-                    ConfigurationSection dataSection = settingsSection.createSection("blockData");
-                    BlockData block = Objects.requireNonNull(Material.getMaterial(Objects.requireNonNull(settingsSection.getString("block")))).createBlockData();
-                    if (block.getAsString().indexOf("[") > 0) {
-                        String fullData = block.getAsString().substring(block.getAsString().indexOf("[") + 1, block.getAsString().lastIndexOf("]"));
-                        for (String data : fullData.split(",")) {
-                            String[] dataPart = data.split("=");
-                            dataSection.set(dataPart[0], dataPart[1]);
-                        }
-                    }
-                    settingsSection.setComments("blockData", List.of("For more information about what these values are, visit https://hub.spigotmc.org/javadocs/spigot/org/bukkit/block/data/BlockData.html"));
-
-                } else if (type == DisplayType.TEXT) {
-                    settingsSection.set("animationTime", 20);
-                    settingsSection.set("refreshTime", 20);
-                    settingsSection.set("text", List.of(Objects.requireNonNull(settingsSection.get("text"))));
-
-                } else if (type == DisplayType.ITEM) {
-                    settingsSection.set("enchanted", false);
-                }
-
-                ConfigurationSection glowSection = Objects.requireNonNull(config.createSection("glow"));
-                glowSection.set("glowing", false);
-                glowSection.set("color", "255;170;0");
-
-                ConfigurationSection hitboxSection = config.createSection("hitbox");
-                hitboxSection.set("override", false);
-                hitboxSection.set("width", 1.0f);
-                hitboxSection.set("height", 1.0f);
-                config.setComments("hitbox", Arrays.asList("Displays don't have hitboxes of their own, so to have click actions independent entities have to be created.", "These settings allow you to control the hitbox of the display.", "(Use F3 + B to see the hitboxes)"));
-            }
-
-            case "1.2" -> {
-                DisplayType type = DisplayType.valueOf(config.getString("type"));
-                if (type == DisplayType.BLOCK) {
-                    ConfigurationSection dataSection = settingsSection.createSection("blockData");
-                    BlockData block = Objects.requireNonNull(Material.getMaterial(Objects.requireNonNull(settingsSection.getString("block")))).createBlockData();
-                    if (block.getAsString().indexOf("[") > 0) {
-                        String fullData = block.getAsString().substring(block.getAsString().indexOf("[") + 1, block.getAsString().lastIndexOf("]"));
-                        for (String data : fullData.split(",")) {
-                            String[] dataPart = data.split("=");
-                            dataSection.set(dataPart[0], dataPart[1]);
-                        }
-                    }
-                    settingsSection.setComments("blockData", List.of("For more information about what these values are, visit https://hub.spigotmc.org/javadocs/spigot/org/bukkit/block/data/BlockData.html"));
-
-                } else if (type == DisplayType.TEXT) {
-                    settingsSection.set("animationTime", 20);
-                    settingsSection.set("refreshTime", 20);
-
-                } else if (type == DisplayType.ITEM) {
-                    settingsSection.set("enchanted", false);
-                }
-
-                ConfigurationSection glowSection = Objects.requireNonNull(config.createSection("glow"));
-                glowSection.set("glowing", false);
-                glowSection.set("color", "255;170;0");
-
-                ConfigurationSection hitboxSection = config.createSection("hitbox");
-                hitboxSection.set("override", false);
-                hitboxSection.set("width", 1.0f);
-                hitboxSection.set("height", 1.0f);
-                config.setComments("hitbox", Arrays.asList("Displays don't have hitboxes of their own, so to have click actions independent entities have to be created.", "These settings allow you to control the hitbox of the display.", "(Use F3 + B to see the hitboxes)"));
-
-                plugin.getMainConfig().getConfig().set("text-update", null);
-                plugin.getMainConfig().save();
-            }
-
-            case "1.2.1", "1.2.2", "1.2.3" -> {
-                ConfigurationSection glowSection = Objects.requireNonNull(config.createSection("glow"));
-                glowSection.set("glowing", false);
-                glowSection.set("color", "255;170;0");
-
-                ConfigurationSection hitboxSection = config.createSection("hitbox");
-                hitboxSection.set("override", false);
-                hitboxSection.set("width", 1.0f);
-                hitboxSection.set("height", 1.0f);
-                config.setComments("hitbox", Arrays.asList("Displays don't have hitboxes of their own, so to have click actions independent entities have to be created.", "These settings allow you to control the hitbox of the display.", "(Use F3 + B to see the hitboxes)"));
-
-                DisplayType type = DisplayType.valueOf(config.getString("type"));
-                if (type == DisplayType.BLOCK) {
-                    ConfigurationSection dataSection = settingsSection.createSection("blockData");
-                    BlockData block = Objects.requireNonNull(Material.getMaterial(Objects.requireNonNull(settingsSection.getString("block")))).createBlockData();
-                    if (block.getAsString().indexOf("[") > 0) {
-                        String fullData = block.getAsString().substring(block.getAsString().indexOf("[") + 1, block.getAsString().lastIndexOf("]"));
-                        for (String data : fullData.split(",")) {
-                            String[] dataPart = data.split("=");
-                            dataSection.set(dataPart[0], dataPart[1]);
-                        }
-                    }
-                    settingsSection.setComments("blockData", List.of("For more information about what these values are, visit https://hub.spigotmc.org/javadocs/spigot/org/bukkit/block/data/BlockData.html"));
-
-                } else if (type == DisplayType.ITEM) {
-                    settingsSection.set("enchanted", false);
-                }
-            }
-
-            case "1.3" -> {
-                ConfigurationSection hitboxSection = config.createSection("hitbox");
-                hitboxSection.set("override", false);
-                hitboxSection.set("width", 1.0f);
-                hitboxSection.set("height", 1.0f);
-                config.setComments("hitbox", Arrays.asList("Displays don't have hitboxes of their own, so to have click actions independent entities have to be created.", "These settings allow you to control the hitbox of the display.", "(Use F3 + B to see the hitboxes)"));
-            }
+        } else if (config.getString("text") != null) {
+            config.set("type", DisplayType.TEXT.name());
+            settingsSection.set("animationTime", 20);
+            settingsSection.set("refreshTime", 20);
+            settingsSection.set("text", List.of(Objects.requireNonNull(config.getString("text"))));
+            settingsSection.set("alignment", config.getString("alignment"));
+            settingsSection.set("backgroundColor", config.getString("backgroundColor") + ";255");
+            settingsSection.set("lineWidth", config.getInt("lineWidth"));
+            settingsSection.set("textOpacity", config.getInt("textOpacity"));
+            settingsSection.set("defaultBackground", config.getBoolean("defaultBackground"));
+            settingsSection.set("seeThrough", config.getBoolean("seeThrough"));
+            config.set("text", null);
+            config.set("alignment", null);
+            config.set("backgroundColor", null);
+            config.set("lineWidth", null);
+            config.set("textOpacity", null);
+            config.set("defaultBackground", null);
+            config.set("seeThrough", null);
         }
+
+        DisplayType type = DisplayType.valueOf(config.getString("type"));
+
+        if (type == DisplayType.BLOCK) {
+            if (!settingsSection.contains("blockData")) {
+                ConfigurationSection dataSection = settingsSection.createSection("blockData");
+                BlockData block = Objects.requireNonNull(Material.getMaterial(Objects.requireNonNull(settingsSection.getString("block")))).createBlockData();
+                if (block.getAsString().indexOf("[") > 0) {
+                    String fullData = block.getAsString().substring(block.getAsString().indexOf("[") + 1, block.getAsString().lastIndexOf("]"));
+                    for (String data : fullData.split(",")) {
+                        String[] dataPart = data.split("=");
+                        dataSection.set(dataPart[0], dataPart[1]);
+                    }
+                }
+                settingsSection.setComments("blockData", List.of("For more information about what these values are, visit https://hub.spigotmc.org/javadocs/spigot/org/bukkit/block/data/BlockData.html"));
+            }
+
+        } else if (type == DisplayType.TEXT) {
+            if (!settingsSection.contains("animationTime")) settingsSection.set("animationTime", 20);
+            if (!settingsSection.contains("refreshTime")) settingsSection.set("refreshTime", 20);
+            settingsSection.set("text", List.of(Objects.requireNonNull(settingsSection.get("text"))));
+
+        } else if (type == DisplayType.ITEM) {
+            if (!settingsSection.contains("enchanted")) settingsSection.set("enchanted", false);
+        }
+
+        if (!config.contains("glow")) {
+            ConfigurationSection glowSection = Objects.requireNonNull(config.createSection("glow"));
+            glowSection.set("glowing", false);
+            glowSection.set("color", "255;170;0");
+        }
+
+        if (!config.contains("hitbox")) {
+            ConfigurationSection hitboxSection = config.createSection("hitbox");
+            hitboxSection.set("override", false);
+            hitboxSection.set("width", 1.0f);
+            hitboxSection.set("height", 1.0f);
+            config.setComments("hitbox", Arrays.asList("Displays don't have hitboxes of their own, so to have click actions independent entities have to be created.", "These settings allow you to control the hitbox of the display.", "(Use F3 + B to see the hitboxes)"));
+        }
+
+        if (config.contains("id")) {
+            Display display = (Display) Bukkit.getEntity(UUID.fromString(Objects.requireNonNull(config.getString("id"))));
+            Objects.requireNonNull(display).remove();
+            config.set("id", null);
+        }
+
+        plugin.getMainConfig().getConfig().set("text-update", null);
+        plugin.getMainConfig().save();
 
         try {
             config.save(file);
